<?xml version="1.0"?>
<package format="2">
  <name>vital_sign_msgs</name>
  <version>0.0.0</version>
  <description>Messages for the detection of human vital signs, e.g., using radar processing.</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
</package>
